# dumpx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: branch-protection-master.json
.github/workflows/: build.yml  release.yml
src/: cli.rs  lib.rs  main.rs  naming.rs  output.rs  size.rs  template.rs
src/formats/: common.rs  csv.rs  image.rs  json.rs  jsonl.rs  markdown.rs  mod.rs  parquet.rs  pdf.rs  text.rs
tests/: cli.rs
