[package]
name = "dumpx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fake = { version = "5.1", features = ["chrono", "http", "random_color", "time", "uuid"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
mimalloc = "0.1"
parquet = "58.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
